Issue #42: Add Solr indexing support for non-variant entities. Minor refactoring and cleanup.